# Lite-Calendar

./: .gitignore  Dockerfile  LICENSE  README.md  calendar.db
src/cpp/notifier/: CMakeLists.txt  main.cpp  notifier.cpp  notifier.h
src/cpp/startup/: CMakeLists.txt  main.cpp
src/python/: main.py
src/python/app/: add_event_dialog.py  database.py  main_window.py
